--- a/index.html
+++ b/index.html
@@ -302,79 +302,68 @@
 
             // Basic validation for privacy policy checkbox
             if (!document.getElementById('privacyAgree').checked) {
-                alert('โปรดยอมรับนโยบายความเป็นส่วนตัวก่อนส่งแบบฟอร์ม');
+                // แทน alert ด้วย modal UI ใน production environment
+                alert('โปรดยอมรับนโยบายความเป็นส่วนตัวก่อนส่งแบบฟอร์ม'); 
                 return;
             }
 
             // Show loading indicator (optional, but good for UX)
-            form.querySelector('button[type="submit"]').textContent = 'กำลังส่ง...';
-            form.querySelector('button[type="submit"]').disabled = true;
+            const submitButton = form.querySelector('button[type="submit"]');
+            const originalButtonText = submitButton.innerHTML; // Store original content to restore later
+            submitButton.innerHTML = 'กำลังส่ง...'; // Change button text to indicate loading
+            submitButton.disabled = true; // Disable button to prevent multiple submissions
 
             // Collect form data
             const formData = new FormData(form);
-            const data = {};
+            const params = new URLSearchParams(); // ใช้ URLSearchParams เพื่อสร้าง body แบบ x-www-form-urlencoded
+
+            // Populate URLSearchParams with form data
             for (let [key, value] of formData.entries()) {
-                // For checkboxes, collect all selected values into an array
-                if (key === 'referralChannel') {
-                    if (!data[key]) {
-                        data[key] = [];
-                    }
-                    data[key].push(value);
-                } else if (key === 'otherChannelText' && otherChannelCheckbox.checked && value.trim() !== '') {
-                    // Append 'อื่น ๆ: [text]' to referralChannel if 'อื่น ๆ' is selected and text is provided
-                    if (!data['referralChannel']) {
-                        data['referralChannel'] = [];
-                    }
-                    if (!data['referralChannel'].includes('อื่น ๆ')) { // Ensure 'อื่น ๆ' is added if not already
-                         data['referralChannel'].push('อื่น ๆ');
-                    }
-                    // Find the index of 'อื่น ๆ' and replace it with the combined string
-                    const otherIndex = data['referralChannel'].indexOf('อื่น ๆ');
-                    if (otherIndex !== -1) {
-                         data['referralChannel'][otherIndex] = `อื่น ๆ: ${value.trim()}`;
-                    } else { // Fallback if 'อื่น ๆ' somehow wasn't added yet
-                         data['referralChannel'].push(`อื่น ๆ: ${value.trim()}`);
-                    }
-                }
-                else {
-                    data[key] = value;
-                }
+                // ไม่ต้องจัดการ "otherChannelText" พิเศษตรงนี้ ปล่อยให้ Apps Script จัดการเอง
+                // แต่ต้องแน่ใจว่าได้ส่งค่าไปให้ Apps Script
+                params.append(key, value);
             }
-
-            // Special handling for referralChannel to join array elements if it exists
-            if (data.referralChannel && Array.isArray(data.referralChannel)) {
-                data.referralChannel = data.referralChannel.join(', ');
+            // หาก "อื่น ๆ" ไม่ถูกเลือก ให้ลบค่า otherChannelText ออกจาก params ก่อนส่ง
+            if (!otherChannelCheckbox.checked) {
+                params.delete('otherChannelText');
             }
-
-            // Convert data to JSON string
-            const jsonString = JSON.stringify(data);
-
+            
             // IMPORTANT: Replace 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE' with your actual deployed Google Apps Script URL
-            const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw9_QNJT9MqXMIJ83VChFS4whH_YoYk_eDZ2YfxmoUf3oW5gurQ8THBoFZiWKu5MtYRKQ/exec'; // <<<--- REPLACE THIS
+            const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxxxKRADzC-H_eMf6tmrgv8_ZlJwakjBbUaJvAj2O05PvHdlM07pKXkGrtVzyZIE6nMvA/exec'; // <<<--- เปลี่ยนเป็น URL ของ Google Apps Script ที่คุณ Deploy ใหม่
 
             try {
                 const response = await fetch(GOOGLE_APPS_SCRIPT_URL, {
                     method: 'POST',
-                    mode: 'no-cors', // Required for simple requests to Apps Script
-                    cache: 'no-cache',
+                    // ไม่ใช้ 'mode: no-cors' เพื่อให้เห็น Error ใน Console ได้
                     headers: {
-                        'Content-Type': 'application/json',
+                        'Content-Type': 'application/x-www-form-urlencoded', // กำหนด Content-Type ให้ถูกต้อง
                     },
-                    body: jsonString
+                    body: params.toString() // แปลง URLSearchParams เป็น string สำหรับ body
                 });
 
-                // Since we use 'no-cors', we can't directly read the response body.
-                // We'll assume success if no network error occurred.
-                // Display thank you message and hide the form
-                form.classList.add('hidden');
-                thankYouMessage.classList.remove('hidden');
-                window.scrollTo({ top: 0, behavior: 'smooth' }); // Scroll to top for thank you message
+                // ตรวจสอบสถานะการตอบกลับของ Server
+                if (response.ok) { // response.ok เป็นจริงสำหรับ status code 200-299
+                    // แสดงข้อความขอบคุณและซ่อนฟอร์ม
+                    form.classList.add('hidden');
+                    thankYouMessage.classList.remove('hidden');
+                    window.scrollTo({ top: 0, behavior: 'smooth' }); // เลื่อนไปด้านบนสุด
+                } else {
+                    // จัดการกรณีที่ Server ตอบกลับด้วย Error (สถานะไม่ใช่ 2xx)
+                    const errorText = await response.text(); // ดึงข้อความ Error จาก Server
+                    console.error('Server responded with an error:', response.status, errorText);
+                    // แทน alert ด้วย modal UI ที่สวยงามใน production environment
+                    alert(`เกิดข้อผิดพลาดในการส่งข้อมูล (Status: ${response.status}). กรุณาลองใหม่อีกครั้ง หรือติดต่อผู้ดูแลระบบ`); 
+                }
+
             } catch (error) {
                 console.error('Error submitting form:', error);
-                // Re-enable submit button and show an error message
-                form.querySelector('button[type="submit"]').textContent = 'ส่งใบสมัคร';
-                form.querySelector('button[type="submit"]').disabled = false;
-                alert('เกิดข้อผิดพลาดในการส่งข้อมูล กรุณาลองใหม่อีกครั้ง'); // Use custom modal in production
+                // จัดการข้อผิดพลาดที่เกิดจากการเชื่อมต่อ (เช่น ไม่มีอินเทอร์เน็ต)
+                // แทน alert ด้วย modal UI ที่สวยงามใน production environment
+                alert('เกิดข้อผิดพลาดในการส่งข้อมูล กรุณาตรวจสอบการเชื่อมต่ออินเทอร์เน็ตและลองใหม่อีกครั้ง'); 
+            } finally {
+                // ไม่ว่าจะสำเร็จหรือล้มเหลว ให้คืนค่าปุ่มและเปิดใช้งาน
+                submitButton.innerHTML = originalButtonText; 
+                submitButton.disabled = false;
             }
         });
     </script>
