--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>สมัครติวฟรี! อังกฤษพิชิต TCAS</title>
+    <title>สมัครรับสิทธิ์ติวฟรี! อังกฤษ พิชิตทุกสนามสอบ TCAS กับ The Act.</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
                 สมัครติวฟรี! อังกฤษพิชิต TCAS ทุกสนามสอบ กับ The Act.
             </h1>
             <p class="text-lg text-gray-700">
-                เลือกรอบเรียนที่คุณสะดวก พร้อมรับสิทธิประโยชน์พิเศษมากมาย
+                กรุณาเลือกรอบเข้าติวที่สะดวก เพียง 1 รอบดเท่านั้น พร้อมรับสิทธิประโยชน์พิเศษมากมาย
             </p>
         </div>
 
@@ -102,11 +102,11 @@
             <!-- Contact Info Section -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-orange-50 p-6 rounded-2xl shadow-md">
                 <div>
-                    <label for="applicantPhone" class="block text-gray-700 text-sm font-semibold mb-2">เบอร์ติดต่อผู้สมัคร <span class="text-red-500">*</span></label>
+                    <label for="applicantPhone" class="block text-gray-700 text-sm font-semibold mb-2">เบอร์มือถือผู้สมัคร <span class="text-red-500">*</span></label>
                     <input type="tel" id="applicantPhone" name="applicantPhone" placeholder="0XXXXXXXXX" required pattern="[0-9]{10}" title="กรุณากรอกเบอร์โทรศัพท์ 10 หลัก" class="w-full p-3 border border-gray-300 rounded-xl focus:ring-orange-500 focus:border-orange-500">
                 </div>
                 <div>
-                    <label for="parentPhone" class="block text-gray-700 text-sm font-semibold mb-2">เบอร์ติดต่อผู้ปกครอง <span class="text-red-500">*</span></label>
+                    <label for="parentPhone" class="block text-gray-700 text-sm font-semibold mb-2">เบอร์มือถือผู้ปกครอง <span class="text-red-500">*</span></label>
                     <input type="tel" id="parentPhone" name="parentPhone" placeholder="0XXXXXXXXX" required pattern="[0-9]{10}" title="กรุณากรอกเบอร์โทรศัพท์ 10 หลัก" class="w-full p-3 border border-gray-300 rounded-xl focus:ring-orange-500 focus:border-orange-500">
                 </div>
                 <div>
