--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <path d="M12 10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
             </svg>
             <h1 class="text-3xl sm:text-4xl font-bold text-orange-600 mb-2">
-                สมัครติวฟรี! อังกฤษพิชิต TCAS ทุกสนามสอบ กับ The Act.
+                สมัครรับสิทธิ์ติวฟรี! อังกฤษ พิชิต TCAS ทุกสนามสอบ กับ The Act.
             </h1>
             <p class="text-lg text-gray-700">
-                กรุณาเลือกรอบเข้าติวที่สะดวก เพียง 1 รอบดเท่านั้น พร้อมรับสิทธิประโยชน์พิเศษมากมาย
+                กรุณาเลือกรอบเข้าติวที่สะดวก เพียง 1 รอบเท่านั้น พร้อมรับสิทธิประโยชน์พิเศษมากมาย
             </p>
         </div>
 
