--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <input type="tel" id="parentPhone" name="parentPhone" placeholder="0XXXXXXXXX" required pattern="[0-9]{10}" title="กรุณากรอกเบอร์โทรศัพท์ 10 หลัก" class="w-full p-3 border border-gray-300 rounded-xl focus:ring-orange-500 focus:border-orange-500">
                 </div>
                 <div>
-                    <label for="applicantEmail" class="block text-gray-700 text-sm font-semibold mb-2">อีเมลผู้สมัครเพื่อรับไฟล์เอกสารติว (แนะนำ Gmail เท่านั้น) <span class="text-red-500">*</span></label>
+                    <label for="applicantEmail" class="block text-gray-700 text-sm font-semibold mb-2">อีเมลผู้สมัครเพื่อรับไฟล์เอกสารติว (ต้องเป็น Gmail เท่านั้น) <span class="text-red-500">*</span></label>
                     <input type="email" id="applicantEmail" name="applicantEmail" placeholder="example@gmail.com" required class="w-full p-3 border border-gray-300 rounded-xl focus:ring-orange-500 focus:border-orange-500">
                 </div>
                 <div>
