--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </svg>
             <h2 class="text-2xl sm:text-3xl font-bold mb-3">ขอบคุณที่สมัครติวฟรีกับ The Act.</h2>
             <p class="text-lg mb-4">
-                ทีมงานได้ร้บข้อมูลการสมัครเรียบร้อยแล้ว สอบถามข้อมูลเพิ่มเติมได้ที่ไลน์<strong class="text-orange-700">@theactkk</strong> เข้ากลุ่มไลน์เพื่อร่วมโครงการติว
+                ทีมงานได้ร้บข้อมูลการสมัครเรียบร้อยแล้ว สอบถามข้อมูลเพิ่มเติมได้ที่ไลน์<strong class="text-orange-700">@theactkk</strong> และเข้ากลุ่มไลน์เพื่อร่วมโครงการติว
                 <a href="https://line.me/ti/g2/EXlRvERRFKJBmr7jqhKch95Fxr8EoWKBO5z0Cg?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank" class="text-blue-600 hover:underline font-bold">
                     คลิ๊ก
                 </a>
