--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
             <svg class="w-16 h-16 mx-auto text-green-600 mb-4" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
             </svg>
-            <h2 class="text-2xl sm:text-3xl font-bold mb-3">ขอบคุณที่สมัครติวฟรีกับ The Act.</h2>
+            <h2 class="text-2xl sm:text-3xl font-bold mb-3">คุณได้สมัครยืนยันรับสิทธิ์ติวฟรี เรียบร้อยแล้ว</h2>
             <p class="text-lg mb-4">
-                คุณได้สมัครยืนยันรับสิทธิ์ติวฟรี เรียบร้อยแล้ว อย่าลืม! กดเข้ากลุ่มไลน์โอเพนแชทห้องติวฟรี อังกฤษ คลิกที่นี่
+                อย่าลืม! กดเข้ากลุ่มไลน์โอเพนแชทห้องติวฟรี อังกฤษ
                 <a href="https://line.me/ti/g2/EXlRvERRFKJBmr7jqhKch95Fxr8EoWKBO5z0Cg?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank" class="text-blue-600 hover:underline font-bold">
-                    คลิ๊ก
+            <h2 class="text-2xl sm:text-3xl font-bold mb-3">คลิ๊ก</h2>
                 </a>
             </p>
         </div>
